@@ -27,6 +27,7 @@ import io.ballerina.projects.internal.PackageVersionContainer;
 import java.util.Collections;
 import java.util.List;
 import java.util.Map;
+import java.util.stream.Collectors;
 
 /**
  * Test implementation of the package repository.
@@ -49,6 +50,6 @@ public class LocalPackageRepository extends DefaultPackageRepository {
                 .stream()
                 .map(PackageDescWrapper::pkgDesc)
                 .map(PackageDescriptor::version)
-                .toList();
+                .collect(Collectors.toList());
     }
 }
